# transcription-model

./: .gitignore  README.md  audio_transcription_config.py  audio_transcription_model.py  plan.md  pull_model_and_infer.py  pull_model_and_test.py  push_model_huggingface.py  pyproject.toml  split_and_push.py  train_audio.py  train_audio_stage_a.sh  train_audio_stage_a_deepseed.sh  train_audio_stage_b.sh  train_audio_stage_b_deepseed.sh
checkpoints/audio_stage_a/: trainer_state.json
checkpoints/audio_stage_a/checkpoint-1532/: trainer_state.json
checkpoints/audio_stage_a/checkpoint-157/: trainer_state.json
