[project]
name = "transcription-model"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.13.0",
    "matplotlib>=3.5",
    "datasets==4.7.0",
    "torch==2.10.0",
    "torchcodec==0.10.0",
    "torchvision==0.25.0",
    "transformers==5.3.0",
]
